# punzinet

./: .gitignore  README.md  setup.cfg
examples/: bce_net.pt  punzi_net.pt  punzi_training.ipynb  training_data.feather  width.txt
src/punzinet/: __init__.py  fom.py  plot.py  prepare.py  train.py
