[metadata]
name = punzinet
version = 0.0.0
author = Paul Feichtinger
author_email = paul.feichtinger@oeaw.ac.at
description = a simple neural network that uses the Punzi FOM as a loss function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feichtip/punzinet
license = MIT
keywords = hep physics FOM Punzi ML neural network loss
project_urls =
    Source = https://github.com/feichtip/punzinet
    Tracker = https://github.com/feichtip/punzinet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.18.0
    scipy>=1.4.1
    torch>=1.5.0
    pandas>=1.0.0
    tqdm>=4.17.0

[options.packages.find]
where = src
